fix: scrollbar style

--- a/front-end/src/app/globals.css
+++ b/front-end/src/app/globals.css
@@ -2,23 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-/* body {
-  background-color: hsl(209, 100%, 28%);
-  color: hsl(33, 93%, 54%);
-  border-color: #fdc180;
-  color: hsl(27, 100%, 50%);
-  color: hsl(218 70% 98%);
-  color: hsl(0, 0%, 97%);
-  color: hsl(25, 95%, 53%);
-  color: hsl(215, 20%, 65%);
-} */
-
-table tbody tr:nth-child(odd) {
+.scrollbar-class table tbody tr:nth-child(odd) {
   background-color: #f1f5f9;
 }
 
 .dark table tbody tr:nth-child(odd) {
   background-color: hsl(217.2 32.6% 17.5%);
+}
+
+/* Estiliza a barra de rolagem */
+.scrollbar-class::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+/* Estiliza o polegar da barra de rolagem */
+.scrollbar-class::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+/* Quando estiver com o hover */
+.scrollbar-class::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* Remove as setas */
+.scrollbar-class::-webkit-scrollbar-button {
+  display: none;
 }
 
 @layer base {
